UI improved on Profile section

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/swipeRefreshLayout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+ <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+   >
 
     <LinearLayout
+        android:id="@+id/llRoot"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/screenBackground"
@@ -116,6 +123,7 @@
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_13sdp"
+                    android:text="@string/credit_score"
                     app:fontFamily="@font/montserrat"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -215,6 +223,7 @@
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp"
+                    android:text="@string/date_of_birth"
                     app:fontFamily="@font/montserrat"
                     app:layout_constraintBottom_toBottomOf="@id/imageView6"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -242,6 +251,7 @@
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp"
+                    android:text="@string/gender"
                     app:fontFamily="@font/montserrat"
                     app:layout_constraintBottom_toBottomOf="@id/imageView7"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -269,6 +279,7 @@
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp"
+                    android:text="@string/marital_status"
                     app:fontFamily="@font/montserrat"
                     app:layout_constraintBottom_toBottomOf="@id/imageView8"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -297,6 +308,7 @@
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp"
+                    android:text="@string/mother_maiden_name"
                     app:fontFamily="@font/montserrat"
                     app:layout_constraintBottom_toBottomOf="@id/imageView9"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -674,6 +686,7 @@
                     android:fontFamily="@font/montserrat"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp"
+                    android:text="@string/type_of_employer"
                     app:layout_constraintBottom_toBottomOf="@id/imageView25"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -701,6 +714,7 @@
                     android:fontFamily="@font/montserrat"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp"
+                    android:text="@string/name_of_employer"
                     app:layout_constraintBottom_toBottomOf="@id/imageView26"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -728,6 +742,7 @@
                     android:fontFamily="@font/montserrat"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp"
+                    android:text="@string/occupation"
                     app:layout_constraintBottom_toBottomOf="@id/imageView27"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -755,6 +770,7 @@
                     android:fontFamily="@font/montserrat"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp"
+                    android:text="@string/employees_id_no"
                     app:layout_constraintBottom_toBottomOf="@id/imageView28"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imageView28"
@@ -781,6 +797,7 @@
                     android:fontFamily="@font/montserrat"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp"
+                    android:text="@string/department"
                     app:layout_constraintBottom_toBottomOf="@id/imageView29"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -809,6 +826,7 @@
                     android:fontFamily="@font/montserrat"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp"
+                    android:text="@string/city"
                     app:layout_constraintBottom_toBottomOf="@id/imageView30"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -895,6 +913,7 @@
                     android:fontFamily="@font/montserrat"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp"
+                    android:text="@string/business_name"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView21"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -922,6 +941,7 @@
                     android:fontFamily="@font/montserrat"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp"
+                    android:text="@string/tin_number"
                     app:layout_constraintBottom_toBottomOf="@id/imageView22"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imageView22"
@@ -948,6 +968,7 @@
                     android:fontFamily="@font/montserrat"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp"
+                    android:text="@string/id_type"
                     app:layout_constraintBottom_toBottomOf="@id/imageView23"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imageView23"
@@ -975,6 +996,7 @@
                     android:fontFamily="@font/montserrat"
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp"
+                    android:text="@string/id_number"
                     app:layout_constraintBottom_toBottomOf="@id/imageView24"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imageView24"
@@ -987,3 +1009,4 @@
     </LinearLayout>
 
 </ScrollView>
+</android.support.v4.widget.SwipeRefreshLayout>
