--- a/app/src/main/res/layout/content_profile_edit_personal.xml
+++ b/app/src/main/res/layout/content_profile_edit_personal.xml
@@ -60,7 +60,8 @@
                             android:layout_height="match_parent"
                             android:hint="@string/title"
                             android:textSize="@dimen/_12sdp"
-                            android:inputType="text" />
+                            android:inputType="text"
+                            android:drawableEnd="@drawable/ic_dropdown"/>
 
                     </com.app.l_pesa.common.CommonInputLayout>
 
@@ -81,7 +82,8 @@
                             android:layout_height="match_parent"
                             android:hint="@string/first_name"
                             android:inputType="text"
-                            android:textSize="@dimen/_12sdp"/>
+                            android:textSize="@dimen/_12sdp"
+                            android:textColor="@color/textColors"/>
 
                     </com.app.l_pesa.common.CommonInputLayout>
 
@@ -95,7 +97,8 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/commonInputLayout4">
+                        app:layout_constraintTop_toBottomOf="@+id/commonInputLayout4"
+                        app:layout_constraintVertical_chainStyle="spread_inside">
 
                         <com.app.l_pesa.common.CommonEditTextRegular
                             android:id="@+id/etNameM"
@@ -103,7 +106,8 @@
                             android:layout_height="match_parent"
                             android:hint="@string/middle_name"
                             android:inputType="text"
-                            android:textSize="@dimen/_12sdp"/>
+                            android:textColor="@color/textColors"
+                            android:textSize="@dimen/_12sdp" />
 
                     </com.app.l_pesa.common.CommonInputLayout>
 
@@ -125,7 +129,9 @@
                             android:layout_height="match_parent"
                             android:hint="@string/last_name"
                             android:inputType="text"
-                            android:textSize="@dimen/_12sdp"/>
+                            android:textSize="@dimen/_12sdp"
+                            android:textColor="@color/textColors"/>
+
                     </com.app.l_pesa.common.CommonInputLayout>
 
                     <com.app.l_pesa.common.CommonInputLayout
@@ -146,7 +152,8 @@
                             android:layout_height="match_parent"
                             android:hint="@string/email"
                             android:inputType="textEmailAddress"
-                            android:textSize="@dimen/_12sdp"/>
+                            android:textSize="@dimen/_12sdp"
+                            android:textColor="@color/textColors"/>
 
                     </com.app.l_pesa.common.CommonInputLayout>
 
@@ -166,7 +173,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:hint="@string/edit_dob"
-                            android:inputType="date" />
+                            android:inputType="date"
+                            android:textColor="@color/textColors"/>
                     </com.app.l_pesa.common.CommonInputLayout>
 
                     <com.app.l_pesa.common.CommonInputLayout
@@ -185,7 +193,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:hint="@string/edit_marital_status"
-                            android:inputType="text" />
+                            android:inputType="text"
+                            android:textColor="@color/textColors"/>
                     </com.app.l_pesa.common.CommonInputLayout>
 
                     <com.app.l_pesa.common.CommonInputLayout
@@ -205,7 +214,8 @@
                             android:layout_height="match_parent"
                             android:hint="@string/edit_mother_maiden_name"
                             android:inputType="text"
-                            android:textSize="@dimen/_12sdp"/>
+                            android:textSize="@dimen/_12sdp"
+                            android:textColor="@color/textColors"/>
 
                     </com.app.l_pesa.common.CommonInputLayout>
 
