--- a/app/src/main/res/layout/content_profile_edit_personal.xml
+++ b/app/src/main/res/layout/content_profile_edit_personal.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/swipeRefreshLayout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".profile.view.ProfileEditPersonalActivity"
-    tools:showIn="@layout/activity_profile_edit_personal">
+    tools:showIn="@layout/activity_profile_edit_personal"
+    android:id="@+id/rootConstraint">
 
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -292,7 +300,7 @@
                     </RadioGroup>
 
                     <Button
-                        android:id="@+id/button3"
+                        android:id="@+id/buttonSubmit"
                         android:layout_width="@dimen/_120sdp"
                         android:layout_height="@dimen/_25sdp"
                         android:layout_marginTop="@dimen/_7sdp"
@@ -309,7 +317,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/imgProfile" />
 
                     <Button
-                        android:id="@+id/button4"
+                        android:id="@+id/buttonCancel"
                         android:layout_width="@dimen/_120sdp"
                         android:layout_height="@dimen/_25sdp"
                         android:layout_marginBottom="4dp"
@@ -321,7 +329,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageView10"
-                        app:layout_constraintTop_toTopOf="@+id/button3" />
+                        app:layout_constraintTop_toTopOf="@+id/buttonSubmit" />
 
                     <ImageView
                         android:id="@+id/imageView10"
@@ -355,3 +363,5 @@
 
 
 </android.support.constraint.ConstraintLayout>
+
+</android.support.v4.widget.SwipeRefreshLayout>
